[package]
name = "sharex"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.41"
rand = "0.8.5"
tracing-subscriber = "0.3.19"
mime_guess = "2.0.5"
clean-path = "0.2.1"
dotenvy = "0.15.7"

[dependencies.axum]
version = "0.7.7"
features = ["multipart", "form", "macros"]
default-features = true

[dependencies.tokio]
version = "1.42.0"
features = ["full"]

[dependencies.tokio-util]
version = "0.7.13"
features = ["io"]

[dependencies.tower-http]
version = "0.6.2"
features = ["trace", "fs"]
